<resources>
    <string name="app_name">Meal Box</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="todo">TODO</string>
    <string name="get_your_taste_today">Get your taste today</string>
    <string name="login_signup">Login/SignUp</string>
    <string name="_91">+91</string>
    <string name="by_continuing_you_are_agree_to_our_nterm_and_condition">By continuing you are agree to our \nTerm and condition</string>
    <string name="or">or</string>
    <string name="we_don_t_have_your_location_yet">We don\'t have your location , yet!</string>
    <string name="set_your_location_to_exploring_your_own_ncuisine_and_find_your_perfect_meal">Set your location to exploring your own \ncuisine and find your perfect meal</string>
    <string name="enable_device_location">Enable device location</string>
    <string name="we_only_access_your_location_while_you_are_using_the_app_for_the_nimprove_the_experience">We only access your location , while you are using the app for the \nimprove the experience</string>
    <string name="rice_and_peas_with_coconut_curry_mackerel">Rice and Peas with Coconut Curry Mackerel</string>
    <string name="top_indian_recipes">Top Indian recipes</string>
    <string name="top_cuisines_for_you">Top Cuisines For you</string>
    <string name="indian_ncuisine">Indian\nCuisine</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="eat_what_makes_you_happy">Eat what makes you happy</string>
    <string name="more">More</string>
    <string name="indian_cuisine">Indian Cuisine</string>
    <string name="corn">Corn</string>
    <string name="_3_4_cup_corn_freshly_hulled_you_can_also_use_frozen_corn_thawed">3/4 cup Corn, freshly hulled (You can also use frozen corn, thawed)</string>
    <string name="step_1">Step - 1</string>
    <string name="spread_corn_flat">Spread corn flat on a baking sheet.Spray lightly with olive oil spray.Roast corn in the oven for about 8-10 minutes. (Be careful not to brown too much or burn.)</string>
    <string name="corn_avocado_salsa">Dish Name</string>
    <string name="_25_mins">25 Mins</string>
    <string name="_25_min">Serves</string>
    <string name="veg">Veg</string>
    <string name="non_veg">Non-Veg</string>
    <string name="ingredients">Ingredients</string>
    <string name="instruction">Instruction</string>
</resources>