<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.LocationActivity">

    <ImageView
        android:id="@+id/ivLocation"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_200sdp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/location_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/wellfleet"
        android:text="@string/we_don_t_have_your_location_yet"
        android:textColor="@color/meal_box_blue"
        android:textSize="@dimen/_17ssp"
        app:layout_constraintEnd_toEndOf="@+id/ivLocation"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/ivLocation"
        app:layout_constraintTop_toBottomOf="@+id/ivLocation" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:fontFamily="@font/wellfleet"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_3sdp"
        android:text="@string/set_your_location_to_exploring_your_own_ncuisine_and_find_your_perfect_meal"
        android:textColor="@color/meal_box_blue"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.622"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvGetLocation"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_40sdp"
        android:foregroundGravity="center"
        app:cardCornerRadius="@dimen/_11sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:backgroundTint="@color/meal_box_blue"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7">


        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/location"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_20sdp"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_device_location"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/wellfleet"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_gravity="center_vertical"/>


    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/wellfleet"
        android:gravity="center"
        android:text="@string/we_only_access_your_location_while_you_are_using_the_app_for_the_nimprove_the_experience"
        android:textColor="@color/meal_box_blue"
        android:textSize="@dimen/_9sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>