<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/ivLoginImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:scaleType="fitXY"
        android:src="@drawable/login_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvSkip"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_23sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:backgroundTint="@color/grey"
        app:cardCornerRadius="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Skip"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/white"
            android:fontFamily="@font/wellfleet"
            android:layout_gravity="center"/>


    </com.google.android.material.card.MaterialCardView>

    <View
        android:id="@+id/vLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_18sdp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/ivLoginImage"
        app:layout_constraintEnd_toEndOf="@+id/ivLoginImage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ivLoginImage" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/wellfleet"
        android:text="@string/get_your_taste_today"
        android:textColor="@color/meal_box_blue"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vLogin" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:fontFamily="@font/wellfleet"
        android:text="@string/login_signup"
        android:textColor="@color/meal_box_blue"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/vLogin" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="@dimen/_65sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_28sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialCardView"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/grey"
        app:strokeWidth="@dimen/_1sdp">

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/flag"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_5sdp"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_91"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/wellfleet"
            android:layout_marginStart="@dimen/_33sdp"
            android:layout_gravity="center_vertical"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="@dimen/_175sdp"
        android:layout_height="@dimen/_35sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        android:backgroundTint="@color/white"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/materialCardView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:strokeColor="@color/grey"
        app:strokeWidth="@dimen/_1sdp">

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:autofillHints=""
            android:inputType="number"
            tools:ignore="LabelFor,TextFields" />

    </com.google.android.material.card.MaterialCardView>

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@color/grey"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/materialCardView2"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/meal_box_blue"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view2"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_15sdp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.416" />


    <ImageView
        android:id="@+id/imGoogleLogin"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:src="@drawable/google"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/wellfleet"
        android:gravity="center"
        android:text="@string/by_continuing_you_are_agree_to_our_nterm_and_condition"
        android:textColor="@color/meal_box_blue"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imGoogleLogin"
        app:layout_constraintStart_toStartOf="@+id/imGoogleLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>