<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ingredients_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:strokeColor="@color/screen_headline_color"
    app:strokeWidth="0.01dp"
    android:padding="@dimen/_1sdp"
    android:backgroundTint="@color/screen_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_background"
        android:layout_margin="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_4sdp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/ivIngredientImage"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:layout_marginStart="@dimen/_2sdp"
            android:src="@drawable/base_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvIngredientName"
            android:layout_width="@dimen/_105sdp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/ivIngredientImage"
            android:fontFamily="@font/wellfleet"
            android:gravity="center"
            android:maxLines="4"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/corn"
            android:textColor="@color/screen_headline_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/ivIngredientImage"
            app:layout_constraintStart_toEndOf="@+id/ivIngredientImage"
            app:layout_constraintTop_toTopOf="@+id/ivIngredientImage" />

        <TextView
            android:id="@+id/tvIngredientAmount"
            android:layout_width="@dimen/_125sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_toEndOf="@+id/tvIngredientName"
            android:fontFamily="@font/wellfleet"
            android:gravity="center"
            android:layout_marginStart="@dimen/_3sdp"
            android:text="@string/_3_4_cup_corn_freshly_hulled_you_can_also_use_frozen_corn_thawed"
            android:textColor="@color/screen_headline_color"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="@+id/tvIngredientName"
            app:layout_constraintStart_toEndOf="@+id/tvIngredientName"
            app:layout_constraintTop_toTopOf="@+id/tvIngredientName" />

        <ImageView
            android:id="@+id/ivIngredientDetail"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center_vertical"
            android:layout_toEndOf="@id/tvIngredientAmount"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:src="@drawable/info"
            app:layout_constraintBottom_toBottomOf="@+id/tvIngredientAmount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvIngredientAmount"
            app:layout_constraintTop_toTopOf="@+id/tvIngredientAmount" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
